language-server/src/tests/snapshots/gleam_language_server__tests__completion__completions_for_an_unqualified_import_already_imported.snap
---
source: language-server/src/tests/completion.rs
expression: "\nimport dep.{wibble,wabble,type Wibble}\n\npub fn main() {\n  0\n}"
---

import dep.{|wibble,wabble,type Wibble}

pub fn main() {
  0
}


----- Completion content -----
myfun
  kind:   Function
  detail: fn() -> Int
  sort:   4_myfun
  desc:   dep
  edits:
    [1:12-1:12]: "myfun"
