language-server/src/tests/snapshots/gleam_language_server__tests__completion__completions_for_an_unqualified_import_on_new_line.snap
---
source: language-server/src/tests/completion.rs
expression: "\nimport dep.{\n  wibble,\n\n}\n\npub fn main() {\n  0\n}"
---

import dep.{
  wibble,
|
}

pub fn main() {
  0
}


----- Completion content -----
Wibble
  kind:   Class
  detail: Type
  sort:   4_Wibble
  edits:
    [3:0-3:0]: "type Wibble"
myfun
  kind:   Function
  detail: fn() -> Int
  sort:   4_myfun
  desc:   dep
  edits:
    [3:0-3:0]: "myfun"
