language-server/src/tests/snapshots/gleam_language_server__tests__completion__completions_for_function_labels.snap
---
source: language-server/src/tests/completion.rs
expression: "\nfn wibble(wibble arg1: String, wobble arg2: String) {\n  arg1 <> arg2\n}\n\nfn fun() { // completion inside parens below includes labels\n  let wibble = wibble()\n}\n"
---

fn wibble(wibble arg1: String, wobble arg2: String) {
  arg1 <> arg2
}

fn fun() { // completion inside parens below includes labels
  let wibble = wibble(|)
}


----- Completion content -----
Error
  kind:   Constructor
  detail: gleam
  sort:   5_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   5_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   5_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   5_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   5_True
fun
  kind:   Function
  detail: fn() -> String
  sort:   3_fun
  desc:   app
  edits:
    [6:22-6:22]: "fun"
wibble
  kind:   Function
  detail: fn(String, String) -> String
  sort:   3_wibble
  desc:   app
  edits:
    [6:22-6:22]: "wibble"
wibble:
  kind:   Field
  detail: String
  sort:   1_wibble:
wobble:
  kind:   Field
  detail: String
  sort:   1_wobble:
