language-server/src/tests/snapshots/gleam_language_server__tests__completion__completions_for_imported_internal_record_fields_in_same_package.snap
---
source: language-server/src/tests/completion.rs
expression: "\nimport mod\n\nfn fun(wibble: mod.Wibble) {\n  wibble.\n  //     ^ `mod` is in the same package so we expect completions here, even though\n  //       `Wibble` is internal.\n}\n"
---

import mod

fn fun(wibble: mod.Wibble) {
  wibble.|
  //     ^ `mod` is in the same package so we expect completions here, even though
  //       `Wibble` is internal.
}


----- Completion content -----
wibble
  kind:   Field
  detail: String
  sort:   2_wibble
wobble
  kind:   Field
  detail: Int
  sort:   2_wobble
