language-server/src/tests/snapshots/gleam_language_server__tests__completion__completions_for_imported_record_labels.snap
---
source: language-server/src/tests/completion.rs
expression: "\nimport dep\n\nfn fun() { // completion inside parens below includes labels\n  let wibble = dep.Wibble()\n}\n"
---

import dep

fn fun() { // completion inside parens below includes labels
  let wibble = dep.Wibble(|)
}


----- Completion content -----
Error
  kind:   Constructor
  detail: gleam
  sort:   5_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   5_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   5_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   5_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   5_True
dep.Wibble
  kind:   Constructor
  detail: fn(String, Int) -> Wibble
  sort:   4_dep.Wibble
  desc:   app
  edits:
    [4:26-4:26]: "dep.Wibble"
fun
  kind:   Function
  detail: fn() -> Wibble
  sort:   3_fun
  desc:   app
  edits:
    [4:26-4:26]: "fun"
wibble:
  kind:   Field
  detail: String
  sort:   1_wibble:
wobble:
  kind:   Field
  detail: Int
  sort:   1_wobble:
