language-server/src/tests/snapshots/gleam_language_server__tests__completion__completions_for_internal_record_fields_inside_the_same_module.snap
---
source: language-server/src/tests/completion.rs
expression: "\n@internal\npub type Wibble {\n    Wibble(wibble: String, wobble: Int)\n}\n\nfn fun(wibble: Wibble) {\n  wibble.\n  //     ^ We should see some completions here!\n}\n"
---
@internal
pub type Wibble {
    Wibble(wibble: String, wobble: Int)
}

fn fun(wibble: Wibble) {
  wibble.|
  //     ^ We should see some completions here!
}


----- Completion content -----
wibble
  kind:   Field
  detail: String
  sort:   2_wibble
wobble
  kind:   Field
  detail: Int
  sort:   2_wobble
